tests/fixtures/errors/member_unknown_builtin.z
# Builtin/system types validate member access against their declared methods:
# a bogus member on a numeric scalar is a hard error, not a silent accept.
main: function is {
    a: 5
    x: a.frobnicate
    print "\{x}"
}
